--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
     <version>4.2.0</version>
     <scope>test</scope>
 </dependency>
+<!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
+<dependency>
+    <groupId>net.masterthought</groupId>
+    <artifactId>cucumber-reporting</artifactId>
+    <version>4.11.2</version>
+</dependency>
 
     
   </dependencies>
